--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -89,17 +89,15 @@ def get_alls_samples_of_group(wildcards):
 
 
 PAIRED_END = sampleTable.columns.str.contains('R2').any() or config.get('interleaved_fastqs',False)
-RAW_INPUT_FRACTIONS = ['R1', 'R2'] if PAIRED_END else ['se']
+
 
 colum_headers_QC= sampleTable.columns[sampleTable.columns.str.startswith("Reads_QC_")]
 if len(colum_headers_QC)>=1:
     MULTIFILE_FRACTIONS= list(colum_headers_QC.str.replace('Reads_QC_',''))
 
     if (len(MULTIFILE_FRACTIONS)==1 ) and config.get('interleaved_fastqs',False):
-        raise NotImplementedError("To start from QC reads that are interleaved is not implemented."
-                                  "Do deinterleave the fastq files with e.g."
-                                  "reformat.sh in=file.fastq.gz out1=file_R1.fastq.gz out2=file_R2.fastq.gz"
-                                  )
+        MULTIFILE_FRACTIONS=['R1','R2']
+
 else:
     MULTIFILE_FRACTIONS = ['R1', 'R2', 'se'] if PAIRED_END else ['se']
 
@@ -108,6 +106,15 @@ if len(colum_headers_raw) ==0:
     SKIP_QC=True
 
     logger.info("Didn't find raw reads in sampleTable - skip QC")
+else:
+    RAW_INPUT_FRACTIONS = ['R1', 'R2'] if PAIRED_END else ['se']
+
+
+if (len(colum_headers_raw) ==0) and (len(colum_headers_QC) ==0):
+
+    raise IOError("Either raw reas or QC reads need to be in the sample table. "
+                  "I din't find any collums with 'Reads_raw_<fraction>' or 'Reads_QC_<fraction>'  "
+                  )
 
 
 class FileNotInSampleTableException(Exception):
@@ -157,7 +164,10 @@ def get_quality_controlled_reads(wildcards):
     externaly and run ATLAS workflow assembly, we expect R1, R2 or se.
     """
 
-    QC_Headers=['Reads_QC_'+f for f in MULTIFILE_FRACTIONS]
+    if config.get('interleaved_fastqs',False) and SKIP_QC:
+        QC_Headers=['Reads_QC_se']
+    else:
+        QC_Headers=['Reads_QC_'+f for f in MULTIFILE_FRACTIONS]
 
     try:
         return get_files_from_sampleTable(wildcards.sample,QC_Headers)
