--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
       - run: .test/dryrun.sh
       - run: atlas run all -w $WORKING_DIR --create-envs-only
       - run: atlas run None -w $WORKING_DIR logs/checkm_init.txt
-      - run: .test/test_assembly.sh
+      #- run: .test/test_assembly.sh
 
 
 
