--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -104,7 +104,7 @@ spades_k: auto
 spades_preset: meta    # meta, ,normal, rna  single end libraries doesn't work for metaspades
 spades_extra: ""
 longread_type: "None" # ["None","pacbio", "nanopore", "sanger", "trusted-contigs", "untrusted-contigs"]
-# Preprocessed long reads can be defined in the sample table with 'longread' , for more info see the spades manual
+# Preprocessed long reads can be defined in the sample table with 'longreads' , for more info see the spades manual
 
 # Filtering
 #------------
