--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -228,18 +228,36 @@ rule genecatalog:
     output:
         temp(touch("finished_genecatalog"))
 
+
+def get_genome_annotations():
+
+    annotation_file_names={"cat_taxonomy":"genomes/taxonomy/taxonomy.tsv",
+               "ssu":"genomes/SSU/ssu_summary.tsv",
+               "checkm_taxonomy":"genomes/checkm/taxonomy.tsv"}
+
+    annotations_requested= config['annotations']
+
+    try:
+        annotations_files=["genomes/annotations/genes"]+[annotation_file_names[an] for an in annotations_requested]
+
+    except Exception as e:
+
+        raise IOError("Error in annotations requested, check config file 'annotations' ") from e
+
+    return annotations_files
+
+
 rule genomes:
     input:
         "genomes/Dereplication/dereplicated_genomes",
-        "genomes/checkm/taxonomy.tsv",
         "genomes/tree/tree.nwk",
+        "genomes/taxonomy/completeness.tsv"
         "genomes/counts/median_coverage_genomes.tsv",
         "genomes/counts/raw_counts_genomes.tsv",
         "genomes/clustering/allbins2genome.tsv",
-        "genomes/SSU/ssu_summary.tsv",
-        "genomes/taxonomy/taxonomy.tsv",
-        "genomes/annotations/genes",
+        *get_genome_annotations()
         "finished_binning"
+
     output:
         temp(touch("finished_genomes"))
 
