add sra to Snakefile

--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -202,6 +202,7 @@ include: "rules/genomes.smk"
 include: "rules/genecatalog.snakefile"
 include: "rules/cat_taxonomy.smk"
 include: "rules/tree.smk"
+include: "rules/sra.smk"
 
 
 
