--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -251,7 +251,7 @@ rule genomes:
     input:
         "genomes/Dereplication/dereplicated_genomes",
         "genomes/tree/tree.nwk",
-        "genomes/taxonomy/completeness.tsv"
+        "genomes/taxonomy/completeness.tsv",
         "genomes/counts/median_coverage_genomes.tsv",
         "genomes/counts/raw_counts_genomes.tsv",
         "genomes/clustering/allbins2genome.tsv",
