replace curl with wget

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,12 +15,11 @@ jobs:
     parallelism: 1
     steps:
       - checkout
-      - run: conda config --add channels bioconda-legacy
       - run: conda config --add channels bioconda
       - run: conda config --add channels conda-forge
       - run: conda config --set always_yes true
       - run: conda config --set quiet true
-      - run: conda install python>=3.6 snakemake pandas bbmap=37.78 click ruamel.yaml biopython curl
+      - run: conda install python>=3.6 snakemake pandas bbmap=37.78 click ruamel.yaml biopython
       - run: python setup.py install
       - run: atlas --help
       - run: atlas --version
