--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -201,6 +201,7 @@ include: "rules/binning.snakefile"
 include: "rules/genomes.smk"
 include: "rules/genecatalog.snakefile"
 include: "rules/cat_taxonomy.smk"
+include: "rules/gtdbtk.smk"
 include: "rules/tree.smk"
 
 
