--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -18,7 +18,10 @@
 # max cores per process
 threads: 32
 # Memory for most jobs especially from BBtools, which are memory demanding
-java_mem: 32
+mem: 32
+# Memory and threads for jobs needing high amount of memory. e.g CAT taxonomy GTDB-tk
+large_mem: 250
+large_threads: 16
 # can be a subset of threads or altered if rule run_spades or run_megahit are being defined differently in your cluster configuration
 assembly_threads: 8
 # in GB
@@ -180,17 +183,18 @@ genome_dereplication:
       length: 0
 
 annotations:
-  - cat_taxonomy
+  - gtdb_tree
+  - gtdb_taxonomy
   - checkm_taxonomy
-  - ssu
+#  - checkm_tree
+#  - ssu
+#  - cat_taxonomy
 
 ########################
 # taxonomy
 #######################
 # Diamond needs up to 100 GB of memory for building the taxonomy database
 # If you prefer you can dowload an existing CAT database, see docs.
-diamond_mem: 100
-diamond_threads: 12
 # number of top hits considered for taxonomic annotation
 cat_range: 5
 # fraction of support needed for classification, <0.5 can give rise to duble classification.
