--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -234,7 +234,8 @@ def get_genome_annotations():
 
     annotation_file_names={"cat_taxonomy":"genomes/taxonomy/taxonomy.tsv",
                "ssu":"genomes/SSU/ssu_summary.tsv",
-               "checkm_taxonomy":"genomes/checkm/taxonomy.tsv"}
+               "checkm_taxonomy":"genomes/checkm/taxonomy.tsv",
+               "feature_counts":"genomes/expression/gene_counts.tsv"}
 
     annotations_requested= config['annotations']
 
