--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -237,7 +237,7 @@ def get_genome_annotations():
                "checkm_taxonomy":"genomes/checkm/taxonomy.tsv",
                "checkm_tree": "genomes/tree/tree.nwk",
                "gtdb_tree":"genomes/taxonomy/gtdbtk.unrooted.tree",
-               "gtdb_tk":"genomes/taxonomy/gtdbtk.bac120.summary.tsv"}
+               "gtdb_taxonomy":"genomes/taxonomy/gtdbtk.bac120.summary.tsv"}
 
     annotations_requested= config['annotations']
 
