--- a/atlas/envs/concoct.yaml
+++ b/atlas/envs/concoct.yaml
@@ -4,5 +4,4 @@ channels:
     - bioconda
     - defaults
 dependencies:
-    - concoct=0.4.0=gsl1.16_0
-    - scikit-learn<=0.17.1
+    - concoct=1.1.*
