--- a/atlas/envs/gtdbtk.yaml
+++ b/atlas/envs/gtdbtk.yaml
@@ -1,6 +1,7 @@
 channels:
-- conda-forge
-- bioconda
-- defaults
+  - conda-forge
+  - bioconda
+  - defaults
 dependencies:
-- gtdbtk=0.3.*
+  - gtdbtk=0.3.*
+  - python=3.6
