--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -9,7 +9,9 @@ from snakemake.utils import logger, min_version, update_config
 sys.path.append(os.path.join(os.path.dirname(os.path.abspath(workflow.snakefile)),"scripts"))
 
 from utils import gen_names_for_range
-
+# in old version java_mem was used, new is mem
+if ('java_mem' in config) and (not ('mem' in config)):
+    config['mem']=config['java_mem']
 
 from conf import load_sample_table
 from default_values import *
