--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -9,7 +9,7 @@
 ####                                                           ####
 ###################################################################
 #  For more details about the config values see:
-#  https://metagenome-atlas.readthedocs.io
+#  https://metagenome-atlas.rtfd.io
 ###################################################################
 
 ########################
@@ -19,7 +19,7 @@
 threads: 32
 # Memory for most jobs especially from BBtools, which are memory demanding
 mem: 32
-# Memory and threads for jobs needing high amount of memory. e.g CAT taxonomy GTDB-tk
+# Memory and threads for jobs needing high amount of memory. e.g GTDB-tk
 large_mem: 250
 large_threads: 16
 # can be a subset of threads or altered if rule run_spades or run_megahit are being defined differently in your cluster configuration
@@ -180,7 +180,7 @@ annotations:
   - gtdb_tree
   - gtdb_taxonomy
   - checkm_taxonomy
-#  - ssu
+
 
 
 
