--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -179,7 +179,7 @@ genome_dereplication:
 annotations:
   - gtdb_tree
   - gtdb_taxonomy
-  - checkm_taxonomy
+#  - checkm_taxonomy
 #  - checkm_tree
 
 
