--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -9,7 +9,7 @@ from snakemake.utils import logger, min_version
 sys.path.append(os.path.join(os.path.dirname(os.path.abspath(workflow.snakefile)),"scripts"))
 import utils
 
-
+config= utils.update_config(config)
 from default_values import * # LOAD HARDCODED values and EGGNOG_HEADER
 from conf import load_sample_table
 sampleTable= load_sample_table()
