--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -15,33 +15,26 @@
 ########################
 # Execution parameters
 ########################
-# max cores per process
-threads: 32
-# Memory for most jobs especially from BBtools, which are memory demanding
-mem: 32
-# Memory and threads for jobs needing high amount of memory. e.g GTDB-tk
+# threads and memory (GB) for most jobs especially from BBtools, which are memory demanding
+threads: 8
+mem: 60
+
+# threads and memory for jobs needing high amount of memory. e.g GTDB-tk or assembly
 large_mem: 250
 large_threads: 16
-# can be a subset of threads or altered if rule run_spades or run_megahit are being defined differently in your cluster configuration
 assembly_threads: 8
-# in GB
 assembly_memory: 250
 
-#For cluster execution
+#Runtime only for cluster execution
 runtime: #in h
     default: 10
-    assembly: 100 
+    assembly: 100
     long: 100
-
-
 
 # Local directory for temp files, useful for cluster execution without shared file system
 tmpdir: /tmp
 # directory where databases are downloaded with 'atlas download'
 database_dir: databases
-
-
-
 
 ########################
 # Quality control
