--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -1,5 +1,4 @@
 ###################################################################
-###################################################################
 ####                 _______   _                    _____      ####
 ####         /\     |__   __| | |          /\      / ____|     ####
 ####        /  \       | |    | |         /  \    | (___       ####
@@ -8,9 +7,10 @@
 ####     /_/    \_\    |_|    |______| /_/    \_\ |_____/      ####
 ####                                                           ####
 ###################################################################
+
 #  For more details about the config values see:
 #  https://metagenome-atlas.rtfd.io
-###################################################################
+
 
 ########################
 # Execution parameters
@@ -41,10 +41,12 @@ database_dir: databases
 ########################
 data_type: metagenome # metagenome or metatranscriptome
 interleaved_fastqs: false
+
 # remove (PCR)-duplicated reads using clumpify
 deduplicate: true
 duplicates_only_optical: false
 duplicates_allow_substitutions: 2
+
 # used to trim adapters from reads and read ends
 preprocess_adapters: /path/to/databases/adapters.fa
 preprocess_minimum_base_quality: 10
@@ -59,6 +61,8 @@ error_correction_overlapping_pairs: true
 #contamination references can be added such that -- key: /path/to/fasta
 contaminant_references:
   PhiX: /path/to/databases/phiX174_virus.fa
+#  host:/path/to/host_genome.fasta
+
 # We won't allow large indels
 contaminant_max_indel: 20
 contaminant_min_ratio: 0.65
@@ -113,10 +117,10 @@ longread_type: none # [none,"pacbio", "nanopore", "sanger", "trusted-contigs", "
 
 # Filtering
 #------------
-prefilter_minimum_contig_length: 200
 # filter out assembled noise
 # this is more important for assemblys from megahit
 filter_contigs: true
+prefilter_minimum_contig_length: 200
 # trim contig tips
 contig_trim_bp: 0
 # require contigs to have read support
@@ -153,7 +157,6 @@ metabat:
   sensitivity: sensitive
   min_contig_length: 1500 # metabat needs >1500
 
-
 maxbin:
   max_iteration: 50
   prob_threshold: 0.9
@@ -178,15 +181,15 @@ genome_dereplication:
       N50: 0.5
       length: 0
 
+########################
+# Annotations
+#######################
+
 annotations:
   - gtdb_tree
   - gtdb_taxonomy
 #  - checkm_taxonomy
 #  - checkm_tree
-
-
-
-
 
 ########################
 # Gene catalog
