--- a/atlasenv.yml
+++ b/atlasenv.yml
@@ -9,6 +9,6 @@ dependencies:
   - pandas
   - bbmap=37.78
   - click=7
-  - ruamel.yaml=0.15
+  - ruamel.yaml=0.15.99 # needs to be explicit
   - biopython
   - cookiecutter
