--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       - run: conda config --add channels conda-forge
       - run: conda config --set always_yes true
       - run: conda config --set quiet true
-      - run: conda activate atlasenv
+      - run: source activate atlasenv
       - run: python setup.py install
       - run: atlas --help
       - run: atlas --version
