dont' unse conda env after gcc error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,7 @@ jobs:
       - run: conda config --add channels conda-forge
       - run: conda config --set always_yes true
       - run: conda config --set quiet true
-      - run: conda env create --file atlasenv.yml
-      - run: source activate atlasenv
+      - run: conda env update --file atlasenv.yml
       - run: python setup.py install
       - run: atlas --help
       - run: atlas --version
