--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,9 @@ jobs:
       - run: conda config --add channels bioconda
       - run: conda config --add channels conda-forge
       - run: conda config --set always_yes true
-      - run: conda env create -n atlasenv --file atlasenv.yml
-      - run: source activate atlasenv
+      - run: conda env update -n base --file atlasenv.yml
       - run: python setup.py install
+      - run: conda list
       - run: atlas --help
       - run: atlas --version
       # make config
