--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -197,9 +197,10 @@ annotations:
 # Gene catalog
 #######################
 genecatalog:
-    clustermethod: linclust       # [cd-hit-est or mmseqs or linclust] see mmseqs for more details
-    minlength_nt: 100
-    minid: 0.95                   # min id for gene clustering for the main gene catalog used for annotation
+  source: contigs               # [contigs, genomes] Predict genes from all contigs or only from the representative genomes
+  clustermethod: linclust       # [cd-hit-est or mmseqs or linclust] see mmseqs for more details
+  minlength_nt: 100
+  minid: 0.95                   # min id for gene clustering for the main gene catalog used for annotation
   coverage: 0.9
   extra: ""
   SubsetSize: 500000
