--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,26 +24,26 @@ jobs:
            conda init bash
       - run:
           name: install dependencies
-          command:  conda env create -p path_atlasenv --file atlasenv.yml
+          command:  conda env create -p /atlasenv --file atlasenv.yml
       - run: python setup.py install
       - run:
           name: test if exists
           command: |
-              source activate -p path_atlasenv
+              source activate /atlasenv
               conda list
               atlas --help
               atlas --version
       - run:
           name: Dryrun
           command: |
-              source activate -p path_atlasenv
+              source activate /atlasenv
               .test/dryrun.sh
       - restore_cache:
           key: conda-envs-{{ tar -c atlas/envs | checksum  }}
       - run:
           name: install environements
           command: |
-              source activate -p path_atlasenv
+              source activate /atlasenv
               atlas run all -w $WORKING_DIR --create-envs-only
               atlas run None -w $WORKING_DIR logs/checkm_init.txt
       - save_cache:
