--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,13 +46,20 @@ jobs:
               source activate /atlasenv
               atlas --help
               atlas --version
+      - run: |
+            source activate /atlasenv
+            atlas download --db-dir $DATABASE_DIR -n
+      - run:
+          name: Init
+          command: |
+              source activate /atlasenv
+              atlas init --db-dir $DATABASE_DIR --threads 3 -w  $WORKING_DIR .test/reads/empty
       - run:
           name: Dryrun
           command: |
               source activate /atlasenv
-              ls
-              pwd
-              .test/dryrun.sh
+              atlas run -w $WORKING_DIR --dryrun $@
+
       - restore_cache:
           key: conda-envs-{{ tar -c atlas/envs | checksum  }}
       - run:
