--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,8 +60,48 @@ jobs:
               source activate /atlasenv
               atlas run -w $WORKING_DIR --dryrun $@
 
+      - persist_to_workspace:
+          root: /
+          paths:
+            - atlasenv
+            - databases
+            - root/project
+
+  dryrun:
+    <<: *defaults
+    parallelism: 1
+    steps:
+      - attach_workspace:
+          at: /
+      - run: |
+          ls
+          pwd
+          cd /root/project/
+      - run: pwd
+
+      - run: |
+            source activate /atlasenv
+            atlas download --db-dir $DATABASE_DIR -n
+      - run:
+          name: Init
+          command: |
+              source activate /atlasenv
+              atlas init --db-dir $DATABASE_DIR --threads 3 -w  $WORKING_DIR .test/reads/empty
+      - run:
+          name: Dryrun
+          command: |
+              source activate /atlasenv
+              atlas run -w $WORKING_DIR --dryrun $@
+  getenvs:
+    <<: *defaults
+    parallelism: 1
+    steps:
+      - attach_workspace:
+          at: /
+      - run: cd /root/project/
+      - run: tar -cf conda_envs.tar atlas/envs
       - restore_cache:
-          key: conda-envs-{{ tar -c atlas/envs | checksum  }}
+          key: conda-envs-{{ checksum "conda_envs.tar"  }}
       - run:
           name: install environements
           command: |
@@ -69,15 +109,10 @@ jobs:
               atlas run all -w $WORKING_DIR --create-envs-only
               atlas run None -w $WORKING_DIR logs/checkm_init.txt
       - save_cache:
-          key: conda-envs-{{ tar -c atlas/envs | checksum  }}
+          key: conda-envs-{{ checksum "conda_envs.tar"  }}
           paths:
             - $DATABASE_DIR
-      - persist_to_workspace:
-          root: /
-          paths:
-            - atlasenv
-            - databases
-            - root/project
+
 
 
 
@@ -91,3 +126,5 @@ workflows:
   build_and_test:
     jobs:
       - build
+      - dryrun
+      - getenvs
