pipeline with dependencies

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,5 +126,9 @@ workflows:
   build_and_test:
     jobs:
       - build
-      - dryrun
-      - getenvs
+      - dryrun:
+          requires:
+            - build
+      - getenvs:
+          requires:
+            - build
